--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "babel-cli": "^6.26.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.5"
   },
   "engines": {
     "node": "12.16.x"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
