--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "redis": "^3.0.2"
   },
   "engines": {
     "node": "12.16.x"
