--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "mongodb": "^3.5.5",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "socket.io": "^2.3.0"
   },
   "engines": {
     "node": "12.16.x"
